03-helm/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  #annotations:
    # use the shared ingress-nginx
    #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wordpress.user-00.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wobbly-gopher-wordpress
            port: 
              number: 80
